# msckf_mono

./: .gitignore  CMakeLists.txt  README.md
euroc/: MH_03_kalibr.yaml  demo_ros.rviz  euroc_config.yaml
include/msckf_mono/: corner_detector.h  helper.hpp  msckf.h  ros_interface.h  ros_utils.hpp  types.h
nodes/: msckf_mono_node.cpp
profiling/: callgrind.main_demo_ros.large.N_500.2115  callgrind.main_demo_ros.large.N_500.31186  callgrind.main_demo_ros.medium.N_500.30516  callgrind.main_demo_ros.small.N_500.31004  profile_msckf_demo_ros.sh  profile_msckf_demo_ros_evaluation.m  profile_unitysim.sh  profiling_results_evaluation.m
src/: corner_detector.cpp  main_demo_ros.cpp  ros_interface.cpp
unitysim/: unitysim_config_large.yaml  unitysim_config_medium.yaml  unitysim_config_small.yaml
